--- a/index.css
+++ b/index.css
@@ -223,16 +223,20 @@ body {
   position: absolute;
   display: block;
   width: 80vw;
-  height: 80vh !important;
-  padding-top: 10vh;
+  height: 80vh;
+  padding-top: 12vh;
   left: 10vw;
   overflow: hidden;
   border-radius: 6px;
 }
 
 #tableSection #upcLaunch {
+  position: absolute;
   color: white;
+  left: 10%;
   font-weight: 400;
+  font-size: 4vh;
+  padding-top: 2vh;
 }
 
 #tableSection table {
